--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -4,4 +4,8 @@
   border: 2px solid #ccc;
   background: darkblue;
   color: #fff;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
 }
