--- a/src/components/Card/Card.css
+++ b/src/components/Card/Card.css
@@ -5,7 +5,7 @@
   border-radius: 3px;
   background: #ffffff;
   max-height: 300px;
-  overflow-y: scroll;
+  overflow-y: auto;
   transition: ease-in-out 300ms;
 }
 
