--- a/src/components/Card/Card.css
+++ b/src/components/Card/Card.css
@@ -7,10 +7,34 @@
   max-height: 300px;
   overflow-y: auto;
   transition: ease-in-out 300ms;
+  display: flex;
+  justify-content: space-between;
 }
 
 .Card:hover {
   background: #ffffff50;
   cursor: move;
   transition: ease-in-out 300ms;
+}
+
+.Card-Content {
+  padding: 4px;
+}
+
+.Card-Actions,
+.Card-Actions-Edit {
+  display: flex;
+  flex-direction: column;
+  padding: 4px;
+  opacity: 0.3;
+}
+
+.Card-Actions:hover,
+.Card-Actions-Edit {
+  opacity: 1;
+}
+
+.Card-Actions > button,
+.Card-Actions-Edit > button {
+  cursor: pointer;
 }
