--- a/src/components/Swimlane/Swimlane.css
+++ b/src/components/Swimlane/Swimlane.css
@@ -11,13 +11,14 @@
 .Swimlane-Header {
   display: flex;
   flex-direction: row;
-  align-items: center;
+  align-items: center; 
 }
 
 .Swimlane-Name {
   padding: 8px;
   margin: 4px;
   font-weight: 700;
+  font-size: smaller;
   position: sticky;
   top: 0px;
   background: #ebecf0;
