--- a/src/containers/Board/Board.css
+++ b/src/containers/Board/Board.css
@@ -1,8 +1,8 @@
 .Board {
-  margin: 4px 8px;
+  margin: 4px;
   display: flex;
   flex-direction: row;
   align-items: flex-start;
   height: calc(100vh - 100px);
-  background: darkblue;
+  background: darkblue; 
 }
